--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.79MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.24MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.34MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.57MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.17MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-230.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-271.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.28MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-9.67MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇻🇳 越南-698.4KB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
   - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
       - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
