--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-230.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-271.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.28MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇳 中国-9.67MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-698.4KB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-686.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.37MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 台湾-165.3KB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-199.1KB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 172.99.188.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: 172.99.188.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: 172.99.188.71, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇸🇬 新加坡-1.65MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.09MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-686.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-199.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-686.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-199.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-686.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-199.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-686.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-199.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-686.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-199.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-686.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-199.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-230.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇻🇳 越南-698.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-686.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.37MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-391.7KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-165.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-199.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
